--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,11 @@
       src="https://kit.fontawesome.com/d26b049d01.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Welcome</title>
   </head>
